# service-lore

./: .gitignore  Pipfile  README.md  pyproject.toml
monitoring/: docker-compose.yml  prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboard.yml  lore-dashboard.json
service/: buffer.py  config.py  github_request.py  main.py  metrics.py  models.py  slack.py
